--- a/portal-web/src/components/shared/TabbedTable/TabbedTable.module.scss
+++ b/portal-web/src/components/shared/TabbedTable/TabbedTable.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/core-styles.scss";
+
 .tabsMenu {
   max-width: 100vw;
 }
@@ -14,14 +16,15 @@
   justify-content: space-between;
   align-items: center;
   text-transform: none;
-  background-color: #adb3b7;
-  max-height: 45px;
+  background-color: $colour-grey-mid;
+  max-height: 48px;
+  padding-left: 16px;
 }
 
 .toolBarVertical {
   display: flex;
   flex-direction: column;
-  background-color: #adb3b7;
+  background-color: $colour-grey-mid;
   max-height: 45px;
 }
 
